--- a/hb-methodologies.org
+++ b/hb-methodologies.org
@@ -266,6 +266,12 @@ On Debian, add tje deb-multimedia.org repo
 #+begin_src su :dir /sudo::
 sudo echo deb http://www.deb-multimedia.org testing main non-free \
                   >>/etc/apt/sources.list
+
+
+or
+
+add-apt-repository ppa:jon-severinsson/ffmpeg
+
 #+end_src
 
 #+begin_src sh :dir /sudo::
@@ -280,6 +286,10 @@ sudo apt-get install -y ffmpeg
 #+end_src
 
 
+Download build and install FFcast
+
+[[http://superuser.com/questions/849193/compiling-ffcast-for-ubuntu-14-04-libx11-is-required][ffmpeg - Compiling FFcast for Ubuntu 14.04, "libx11 is required"?]] Super User
+
 #+begin_src sh
 sudo apt-get install autoconf automake build-essential checkinstall git libx11-dev x11-utils
 git clone --recursive https://github.com/lolilolicon/FFcast.git
@@ -290,6 +300,19 @@ make
 sudo checkinstall --pkgname ffcast --pkgversion "1:2.4.1+git$(git rev-parse --short HEAD)" --fstrans=no --default
 #+end_src
 
+Install Gifify
 
+  - can't figure out how to install gifify on debian :(
+
+Create a file in /usr/local/bin/ named e.g. gifcast (and chmod 755 it) :
+
+#+begin_src sh
+#!/bin/bash
+TMP_AVI=$(mktemp /tmp/outXXXXXXXXXX.avi)
+ffcast -s % ffmpeg -y -f x11grab -show_region 1 -framerate 15 \
+    -video_size %s -i %D+%c -codec:v huffyuv                  \
+    -vf crop="iw-mod(iw\\,2):ih-mod(ih\\,2)" $TMP_AVI         \
+&& convert -set delay 10 -layers Optimize $TMP_AVI out.gif
+#+end_src
 
 * Further Reading
